Fix alignment of reactions in bubble layout thread view

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -880,8 +880,6 @@ $left-gutter: 64px;
             order: 999;
             padding-left: 0;
             padding-right: 0;
-            margin-left: 36px;
-            margin-right: 50px;
         }
     }
 
@@ -917,6 +915,11 @@ $left-gutter: 64px;
             .mx_MImageBody {
                 margin: 0;
             }
+        }
+
+        .mx_ReactionsRow {
+            margin-left: 36px;
+            margin-right: 50px;
         }
 
         .mx_MessageTimestamp {
